[gd_scene load_steps=4 format=3 uid="uid://jfqv24h8e8q7"]

[ext_resource type="Texture2D" uid="uid://djyfr6v3py53u" path="res://assets/tiles/platform.png" id="1_0oegv"]
[ext_resource type="Script" path="res://levels/platform.gd" id="1_ei808"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7q70c"]

[node name="Platform" type="Node2D"]
script = ExtResource("1_ei808")

[node name="PlatformBody" type="RigidBody2D" parent="."]
collision_mask = 2
mass = 10.0
gravity_scale = 2.66454e-15
can_sleep = false

[node name="Sprite2D" type="Sprite2D" parent="PlatformBody"]
texture = ExtResource("1_0oegv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlatformBody"]
polygon = PackedVector2Array(-23, -18, -18, -23, 18, -23, 23, -18, 23, 18, 18, 23, -18, 23, -23, 18)

[node name="CollisionDetection" type="Area2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(1.99989, 0.108127)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetection"]
shape = SubResource("RectangleShape2D_7q70c")

[node name="TimeoutTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="DropTimer" type="Timer" parent="." groups=["spawn_timer"]]
wait_time = 3.0
one_shot = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="CollisionDetection" to="." method="_on_collision_detection_body_entered"]
[connection signal="timeout" from="TimeoutTimer" to="." method="_on_timeout_timer_timeout"]
[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
